<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_button"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/available_sessions"
            android:icon="@drawable/ic_speaker_group_black_24dp"
            android:title="@string/available_sessions" />
    </group>

    <group
        android:id="@+id/menu_group_2"
        android:checkableBehavior="none">
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
    </group>
</menu>
