<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/settings_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/general"
                android:textColor="@color/orange"
                android:textSize="@dimen/header_size"
                android:textStyle="bold"
                android:fontFamily="@font/karla"/>

            <Switch
                android:id="@+id/search_start_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:checked="false"
                android:gravity="start"
                android:minHeight="50dp"
                android:switchMinWidth="50dp"
                android:text="@string/scan_for_sessions_at_startup" />

            <Switch
                android:id="@+id/low_battery_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:checked="false"
                android:gravity="left"
                android:minHeight="@dimen/switch_size"
                android:switchMinWidth="@dimen/switch_size"
                android:text="@string/low_battery_mode" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_margin"
            android:layout_marginRight="@dimen/settings_margin"
            android:layout_marginBottom="@dimen/settings_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/user"
                android:textColor="@color/orange"
                android:textSize="@dimen/header_size"
                android:textStyle="bold"
                android:fontFamily="@font/karla"/>

            <ListView
                android:id="@+id/userSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_margin"
            android:layout_marginRight="@dimen/settings_margin"
            android:layout_marginBottom="@dimen/settings_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_settings"
                android:textColor="@color/orange"
                android:textSize="@dimen/header_size"
                android:textStyle="bold"
                android:fontFamily="@font/karla"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>