<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:gravity="center"
        android:background="@color/orange">

        <ImageView
            android:id="@+id/arrow_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/user_mute_or_unmute"
            android:src="@drawable/ic_keyboard_arrow_up_black_24dp" />

        <LinearLayout
            android:id="@+id/show_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/arrow_icon">

            <TextView
                android:id="@+id/other_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Currently Listening..."
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/show_layout">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@string/people_picture"
                android:src="@drawable/ic_people_black_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/swipe"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_layout"
            android:layout_toEndOf="@+id/arrow_icon"
            android:text="@string/open_drawer"
            android:textSize="18sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>